# NumPad_21Key

./: .gitignore  CMakeLists.txt  README.md  sk6812mini.pio
src/: blink_rate.h  callbacks.c  callbacks.h  core1_commands.h  main.c  numpad_config.c  numpad_config.h  old_code.txt  pin_names.c  pin_names.h  setup.c  setup.h  states.c  states.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
